--- a/style.css
+++ b/style.css
@@ -696,3 +696,32 @@ footer {
     grid-column: 1/3;
   }
 }
+
+  .btn-profile:hover {
+    background-color: #e5d241 !important;
+    border-color: #e5d241 !important;
+    color: #000 !important; 
+    transition: all 0.3s ease;
+  }
+
+.btn-icon-mode {
+    width: 45px;
+    height: 45px;
+    border-radius: 50%; 
+    padding: 0 !important; 
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.2rem !important;
+    background-color: #000;
+    color: white;
+    border: 1px solid #000;
+    transition: 0.3s ease;
+}
+
+.btn-icon-mode:hover {
+    background-color: #e5d241 !important;
+    border-color: #e5d241 !important;
+    color: #000 !important;
+    transform: scale(1.1);
+}
